// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SubscriptionCard should not render hasRole 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="subscriptions-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:re:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Subscriptions
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Subscriptions title"
              class="pf-v6-c-description-list pf-m-1-col"
              data-ouia-component-id="Subscriptions title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Usage
                  </span>
                </dt>
                <dd
                  aria-label="Usage value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Usage value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Development
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    SLA
                  </span>
                </dt>
                <dd
                  aria-label="SLA value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="SLA value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Self-Support
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SubscriptionCard should not render hasSLA 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="subscriptions-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:rb:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Subscriptions
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Subscriptions title"
              class="pf-v6-c-description-list pf-m-1-col"
              data-ouia-component-id="Subscriptions title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Usage
                  </span>
                </dt>
                <dd
                  aria-label="Usage value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Usage value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Development
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Role
                  </span>
                </dt>
                <dd
                  aria-label="Role value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Role value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Red Hat Enterprise Linux Server
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SubscriptionCard should not render hasUsage 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="subscriptions-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r8:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Subscriptions
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Subscriptions title"
              class="pf-v6-c-description-list pf-m-1-col"
              data-ouia-component-id="Subscriptions title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    SLA
                  </span>
                </dt>
                <dd
                  aria-label="SLA value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="SLA value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Self-Support
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Role
                  </span>
                </dt>
                <dd
                  aria-label="Role value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Role value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Red Hat Enterprise Linux Server
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SubscriptionCard should render correctly - loading 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="subscriptions-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r2:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Subscriptions
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Subscriptions title"
              class="pf-v6-c-description-list pf-m-1-col"
              data-ouia-component-id="Subscriptions title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Usage
                  </span>
                </dt>
                <dd
                  aria-label="Usage value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Usage value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    SLA
                  </span>
                </dt>
                <dd
                  aria-label="SLA value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="SLA value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Role
                  </span>
                </dt>
                <dd
                  aria-label="Role value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Role value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    <div
                      class="pf-v6-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                    >
                      <span
                        class="pf-v6-screen-reader"
                      />
                    </div>
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SubscriptionCard should render correctly with data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-card pf-m-expanded"
    data-ouia-component-id="subscriptions-card"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-toggle"
      >
        <button
          class="pf-v6-c-button pf-m-plain"
          data-ouia-component-id="OUIA-Generated-Button-plain-:r5:"
          data-ouia-component-type="PF6/Button"
          data-ouia-safe="true"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-card__header-toggle-icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M18.71 5.29a.996.996 0 0 0-1.41 0l-7.29 7.29-7.3-7.29a.987.987 0 0 0-1.41-.02.987.987 0 0 0-.02 1.41l.02.02 7.65 7.65c.29.29.68.44 1.06.44s.77-.15 1.06-.44l7.65-7.65a.996.996 0 0 0 0-1.41Z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-c-card__title"
        >
          <div
            class="pf-v6-c-card__title-text"
          >
            Subscriptions
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__expandable-content"
    >
      <div
        class="pf-v6-c-card__body"
      >
        <div
          class="pf-v6-l-stack pf-m-gutter"
        >
          <div
            class="pf-v6-l-stack__item pf-m-fill"
          >
            <dl
              aria-label="Subscriptions title"
              class="pf-v6-c-description-list pf-m-1-col"
              data-ouia-component-id="Subscriptions title"
            >
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Usage
                  </span>
                </dt>
                <dd
                  aria-label="Usage value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Usage value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Development
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    SLA
                  </span>
                </dt>
                <dd
                  aria-label="SLA value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="SLA value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Self-Support
                  </div>
                </dd>
              </div>
              <div
                class="pf-v6-c-description-list__group"
              >
                <dt
                  class="pf-v6-c-description-list__term"
                >
                  <span
                    class="pf-v6-c-description-list__text"
                  >
                    Role
                  </span>
                </dt>
                <dd
                  aria-label="Role value"
                  class="pf-v6-c-description-list__description"
                  data-ouia-component-id="Role value"
                >
                  <div
                    class="pf-v6-c-description-list__text"
                  >
                    Red Hat Enterprise Linux Server
                  </div>
                </dd>
              </div>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
